objects/HtmlTagRecord__c.object
<CustomObject>
    <fields>
        <fullName>DFA_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DFA Rule</label>
        <referenceTo>DFA_Rule__c</referenceTo>
        <relationshipLabel>HtmlTagRecords</relationshipLabel>
        <relationshipName>HtmlTagRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Record</label>
        <referenceTo>HtmlTagRecord__c</referenceTo>
        <relationshipLabel>HtmlTagRecords</relationshipLabel>
        <relationshipName>HtmlTagRecords</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tags__c</fullName>
        <label>Tags</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>HtmlTagRecord</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HT-{0000}</displayFormat>
        <label>HtmlTagRecord Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HtmlTagRecords</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>